update paths to umivarcal input files

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,10 @@ profiles {
       bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.bed"
       ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
       ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
+      // These are specially formatted to work in umi-varcal. 
+      ref_fasta_chr = 's3://uwlm-ngs-refs/human/MONCv1/human_g1k_v37.fasta'
+      ref_index_chr = 's3://uwlm-ngs-refs/human/MONCv1/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
+      bed_targets_chr = 's3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_chr.bed'
     }
     workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
     process {
@@ -114,6 +118,11 @@ profiles {
       ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
       bed_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
       bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.bed'
+      // These are specially formatted to work in umi-varcal. 
+      bed_targets_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_chr.bed'
+      ref_fasta_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/human_g1k_v37.fasta'
+      ref_index_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
+
     }
     
     executor {
@@ -124,7 +133,7 @@ profiles {
 
     process {
 
-      errorStrategy = 'ignore'  // continues pipeline even when one process errors out; similar to -k flag in scons
+      //errorStrategy = 'ignore'  // continues pipeline even when one process errors out; similar to -k flag in scons
   
       withLabel:bwa {
         container = 'sheenamt/alignment:v1.0'
