add in error ignore

--- a/nextflow.config
+++ b/nextflow.config
@@ -133,7 +133,7 @@ profiles {
 
     process {
 
-      //errorStrategy = 'ignore'  // continues pipeline even when one process errors out; similar to -k flag in scons
+      errorStrategy = 'ignore'  // continues pipeline even when one process errors out; similar to -k flag in scons
   
       withLabel:bwa {
         container = 'sheenamt/alignment:v1.0'
