--- a/dockerfiles/umi-varcal/Dockerfile
+++ b/dockerfiles/umi-varcal/Dockerfile
@@ -3,14 +3,15 @@ FROM ubuntu:20.04
 RUN apt-get update && \
     apt-get install -y git \
     python3 \
+    libbz2-dev \
     python3-pip && \
     apt-get clean && apt-get purge
    
 RUN python3 -m pip install msgpack==0.5.6 \
+    cython \
     pyfasta \
     pysam \
     scipy \
-    cython \
     statsmodels
 
 RUN mkdir /home/umi-varcal &&\
