--- a/nextflow.config
+++ b/nextflow.config
@@ -58,25 +58,36 @@ profiles {
       withLabel:mosdepth{
         container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
         cpus = 4 // per docs, no benefit after 4 threads
-        memory '4GB'
+        memory = '4GB'
       }
       withLabel:multiqc{
         container = 'sheenamt/multiqc-pandas:v1.0'
-        cpus = 4
         memory = '4GB'
       }
-      withLabel:umivarcal{
-        container = 'sheenamt/umi-varcal:v1.0'
-      }
+      // withLabel:umivarcal{
+      //   container = 'sheenamt/umi-varcal:v1.0'
+      //   cpus = 4
+      //   memory = '8GB'
+      // }
       withLabel:bcftools{
         container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
       }
       withLabel:vardict{
         container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+        memory = '2GB'
       }
       withLabel:pileup{
         container = 'sheenamt/alignment:v1.0'
         cpus = 2
+        memory = '4GB'
+      }
+      withLabel:plotting{
+        container = 'sheenamt/multiqc-pandas:v1.0'
+        memory = '4GB'
+      }
+      withLabel:smc2{
+        container = 'sheenamt/smc2:v1.0'
+        cpus = 8
         memory = '8GB'
       }
       // withLabel:varscan{
@@ -113,10 +124,10 @@ profiles {
       // reference files
       picard_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.interval_list'
       picard_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list'
-      ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
-      ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
       bed_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
       bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.bed'
+      ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
+      ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
       // These are specially formatted to work in umi-varcal. 
       bed_targets_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_chr.bed'
       ref_fasta_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/human_g1k_v37.fasta'
