change memory in local profile as well

--- a/nextflow.config
+++ b/nextflow.config
@@ -137,7 +137,7 @@ profiles {
     executor {
       name = 'local'
       cpus = 48
-      memory = '192GB'
+      memory = 192.GB
     }
 
     process {
@@ -147,63 +147,63 @@ profiles {
       withLabel:bwa {
         container = 'sheenamt/alignment:v1.0'
         cpus = 8
-        memory = '16GB'
+        memory = 16.GB
       }
       withLabel:fgbio{
         container = 'quay.io/biocontainers/fgbio:1.1.0--0'
-        memory = '12GB'
+        memory = 12.GB
       }
       withLabel:sambamba{
         container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
         cpus = 8
-        memory = '8GB'
+        memory = 8.GB
       }
       withLabel:picard{
         container = 'quay.io/biocontainers/picard:2.22.1--0'
-        memory = '16GB'
+        memory = 16.GB
       }
       withLabel:fastqc{
         container = 'quay.io/biocontainers/fastqc:0.11.8--1'
-        memory = '4GB'
+        memory = 4.GB
       }
       withLabel:mosdepth{
         container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
         cpus = 4 // per docs, no benefit after 4 threads
-        memory = '4GB'
+        memory = 4.GB
       }
       withLabel:multiqc{
         container = 'sheenamt/multiqc-pandas:v1.0'
-        memory = '4GB'
+        memory = 4.GB
       }
       withLabel:umivarcal{
         container = 'sheenamt/umi-varcal:v1.0'
         cpus = 4
-        memory = '8GB'
+        memory = 8.GB
       }
       withLabel:bcftools{
         container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
       }
       withLabel:vardict{
         container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
-        memory = '2GB'
+        memory = 2.GB
       }
       withLabel:pileup{
         container = 'sheenamt/alignment:v1.0'
         cpus = 2
-        memory = '4GB'
+        memory = 4.GB
       }
       withLabel:plotting{
         container = 'sheenamt/multiqc-pandas:v1.0'
-        memory = '4GB'
+        memory = 4.GB
       }
       withLabel:smc2{
         container = 'sheenamt/smc2:v1.0'
         cpus = 8
-        memory = '8GB'
+        memory = 8.GB
       }
       // withLabel:varscan{
       //   container = 'quay.io/biocontainers/varcsan:2.3.7--3'
-      //   memory = '8GB'
+      //   memory = 8.GB
       // }
 
     }
